# build-bot

./: .build-bot.conf  .gitmodules  CMakeLists.txt  CTestConfig.cmake  LICENSE  version.cpp.in
etc/build-bot/: bot.conf  macros.conf  repositories.conf
include/build-bot/: bot.h  version.h  worker.h
src/: bot.cpp  main.cpp  worker.cpp
